# oh-examples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pr-review-by-openhands.yml  precommit.yml  tests.yml
conversation-metrics/: README.md  oh-metrics  pyproject.toml
conversation-metrics/oh_api/: __init__.py  cli.py  client.py  metrics.py  v0.py  v1.py
conversation-metrics/tests/: conftest.py  test_cli.py  test_client.py  test_metrics.py  test_v0_driver.py  test_v1_driver.py
conversation-metrics/tests/fixtures/: GET__api_conversations_notfound.json  GET__api_conversations_trajectory_fallback.json  GET__api_conversations_trajectory_fallback_events_q_limit=100_a_reverse=true.json  GET__api_conversations_trajectory_fallback_trajectory.json  GET__api_conversations_v0test123.json  GET__api_conversations_v0test123_events_q_limit=100_a_reverse=true.json  GET__api_conversations_v1_72d40619.json  GET__api_conversations_v1_72d40619_events_q_limit=100_a_reverse=true.json  GET__api_conversations_v1test456.json  GET__api_v1_app-conversations_q_ids=v1_72d40619.json  GET__api_v1_app-conversations_q_ids=v1test456.json  GET__api_v1_conversation_v1_72d40619_events_search_q_limit=100.json
per-conversation-secrets/: README.md  mcp_server.py  test_mcp_secrets.py  test_mcp_secrets_at_start.py  test_secrets.py  test_secrets_at_start.py
per-conversation-secrets/test-plugin/: .mcp.json  SKILL.md
per-conversation-secrets/test-plugin/.plugin/: plugin.json
tests/: __init__.py  conftest.py  test_client.py  test_conversation_metrics.py  test_metrics.py  test_v0_driver.py  test_v1_driver.py
