[project]
name = "oh-examples"
version = "0.1.0"
description = "Example code for working with the OpenHands API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "JP Shackelford"},
]
keywords = ["openhands", "api", "examples"]

dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pycodestyle>=2.12.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
extend-select = ["B006", "B008", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "E402"]
"conversation-metrics/oh-metrics" = ["E402"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
include = ["conversation-metrics/oh_api", "tests"]
extraPaths = ["conversation-metrics"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.coverage.run]
source = ["conversation-metrics/oh_api"]
omit = ["tests/*", "conversation-metrics/oh-metrics"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
