[project]
name = "oh-conversation-metrics"
version = "0.1.0"
description = "CLI and library for retrieving OpenHands conversation metrics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.scripts]
oh-metrics = "oh_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
